# life_of_pi

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: system_benchmarks.rs
docs/: WORKFLOW_FIXES.md
legacy/scripts/: validate-workflow.sh
legacy/src 2/metrics/: collector.rs  traits.rs
legacy/src 2/web/: config.rs  handlers.rs  mod.rs  websocket.rs
legacy/tests/: unit_tests.rs
scripts/: validate-workflow.sh
src/: error.rs  lib.rs  main.rs
src/metrics/: collector.rs  data.rs  gpio.rs  mod.rs  traits.rs
src/web/: config.rs  handlers.rs  mod.rs  router.rs  websocket.rs
static/: index.html
tests/: integration_tests.rs  unit_tests.rs
