[package]
name = "life_of_pi"
version = "0.1.0"
edition = "2021"
authors = ["Austin Couch"]
description = "Real-time Raspberry Pi system monitoring with web interface"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["raspberry-pi", "system-monitoring", "embedded"]
categories = ["embedded", "web-programming"]
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = "0.7.5"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# System information
sysinfo = "0.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
